# meta-features-for-gnn-performance

./: .gitignore  README.md  pyproject.toml
metadescriptor_project/: MLP.ipynb
metadescriptor_project/analysis/: feature_importance.py  summary_generation.py
metadescriptor_project/data/: data.py  preprocessing.py
metadescriptor_project/gnn/: launcher.py  main_train_gnn.py  model.py  model_hpo.py  optuna_search.py  result_analysis.py  train_pipeline.py
metadescriptor_project/pipeline/: gbolt_metadescripteur_pipeline.py  main.py  meta_descr_reduction.py  meta_descripteurs.py  metadescriptor_pipeline.py  save_pickle_csv_json.py
metadescriptor_project/tree/: Analyzer.py  DTR.py  dataset_dtr.py  main.py  main_mlp.py
metadescriptor_project/utils/: colors.py  extract_metadata.py  graph_utils.py  io_utils.py  my_columns_utils.py
