[project]
name = "stage-pandora"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12,<3.15"
dependencies = [
    "click>=8.3.1",
    "dotenv>=0.9.9",
    "graphviz>=0.21",
    "ipython>=9.6.0",
    "jupyter>=1.1.1",
    "lightning>=2.6.1",
    "matplotlib>=3.10.6",
    "mlflow>=3.10.1",
    "networkx>=3.5",
    "numpy>=2.3.3",
    "optuna>=4.6.0",
    "optuna-integration[pytorch-lightning]>=4.7.0",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "polars>=1.35.2",
    "pyarrow>=22.0.0",
    "pydotplus>=2.0.2",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "skorch>=1.3.0",
    "spmf>=1.4",
    "streamlit>=1.50.0",
    "tensorboard>=2.20.0",
    "torch>=2.8.0",
    "torch-geometric>=2.6.1",
    "torchaudio>=2.8.0",
    "torchmetrics>=1.8.2",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "ipython>=9.11.0",
    "lightning>=2.6.1",
    "optuna>=4.8.0",
    "polars>=1.39.0",
    "scikit-learn>=1.8.0",
    "tensorboard>=2.20.0",
    "torch-geometric>=2.7.0",
]
